syntax = "proto3";
package avelio.playlists;

import "proto/general.proto";

message Playlist {
  string id = 1;
  string title = 2;
  string total_playback_display = 3;
  string playlist_owner_id = 4;
}

message NewPlaylistResponse { Playlist playlist = 1; }

message AddSongsRequest { repeated string songs = 1; }
message GetPlaylistResponse { repeated avelio.general.Song songs = 1; }